Get rid of convention plugins to be able to properly use Kotlin 2.3.0